2007-01-02 Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix equery depends --indirect command. (Bug #124552)

2006-12-31 Paul Varner <fuzzyray@gentoo.org>
	* equery: Reworked equery depends command to be more accurate.

2006-12-13 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix handling of /etc/portage/package.mask (Bug
	#158025) Thanks to Wolfram Schlich for the patch.

2006-12-12 Paul Varner <fuzzyray@gentoo.org>
	* equery: Add --tree option to equery files command. (Bug #62898)
	Thanks to scope for the patch.

2006-12-06 Paul Varner <fuzzyray@gentoo.org>
	* equery: Modify equery size command to work like the equery list
	command for pkgspec arguments

2006-11-27 Paul Varner <fuzzyray@gentoo.org>
	* eclean: Fix typographical error in help and man page. (Bug #156243)

2006-10-11 Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix fileAsStr to understand device files.
	(http://forums.gentoo.org/viewtopic-p-3639575.html)

2006-10-07 Paul Varner <fuzzyray@gentoo.org>
	* euse: Fix quoting bug in get_real_path() (Bug #150335).

2006-09-21 Paul Varner <fuzzyray@gentoo.org>
	* eread: Add eread script for reading and managing portage ELOG files.
	Thanks to Donnie Berkholz for writing this.

2006-09-03 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Remove unused environment variables before calling
	emerge (Bug #142074). Check for permissions to write temporary files
	(Bug #142308)

2006-08-12 Marius Mauch <genone@gentoo.org>
	* glsa-check: Add new --mail option to send out vulnerability reports
	(output of --list plus --dump for each matched glsa as attachment),
	using elog configuration.

2006-07-31 Paul Varner <fuzzyray@gentoo.org>
	* euse: Replace calls to readlink with bash function for Gentoo/ALT
	compatibility. (Bugs #140477, #128960)

2006-07-28 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix revdep-rebuild to correctly handle --ask being
	passed to emerge. Thanks to Sal Gonzalez <ghostx@optonline.net> for
	the patch. (Bug #37485)
