@@ -17,9 +17,8 @@ dist:
 	    ../../$(distdir)/src/gensync/
 
 install: all
-	install -m 0755 gensync $(bindir)/
-	install -d $(docdir)/gensync
-	install -m 0644 AUTHORS README TODO ChangeLog $(docdir)/gensync/
-	install -m 0644 gensync.1 $(mandir)/
-	install -d $(DESTDIR)/etc/gensync
-	install -m 0644 gensync.conf bmg-main.syncsource bmg-gnome-current.syncsource $(DESTDIR)/etc/gensync/
+	install -d $(docdir)/deprecated/gensync
+	install -m 0755 gensync $(docdir)/deprecated/gensync/
+	install -m 0644 AUTHORS README TODO ChangeLog $(docdir)/deprecated/gensync/
+	install -m 0644 gensync.1 $(docdir)/deprecated/gensync/
+	install -m 0644 gensync.conf bmg-main.syncsource bmg-gnome-current.syncsource $(docdir)/deprecated/gensync/
